sema/testdata/gcc-c99-extra/reject/init-desig-obs-3.c
struct s { int a; };
struct s s0 = { .a = 1 };
struct s s1 = { a: 1 };

int x0[] = { [0] = 1 };
int x1[] = { [0] 1 };
